# rust-s3-example

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
aws/: resources.sh
src/: main.rs  order.rs  reader.rs  writer.rs
src/aws/: mod.rs  order.rs  reader.rs  writer.rs
