[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-types = { version = "0.49.0", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "0.19.0"
bincode = "1.0"
futures = "0.3.24"
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
